--- a/local.yml
+++ b/local.yml
@@ -1,8 +1,8 @@
-- hosts: osboxes
+- hosts: localhost
   become: true
   pre_tasks:
     - name: update repositories
-      apt: update_cache-yes
+      apt: update_cache=yes
       change_when: False
 
   tasks:
