--- a/local.yml
+++ b/local.yml
@@ -3,6 +3,8 @@
   pre_tasks:
     - name: update repositories
       apt: update_cache=yes
+    - name: upgrade apt
+      apt: upgrade-dist
 
   tasks:
     - include: tasks/packages.yml
