--- a/local.yml
+++ b/local.yml
@@ -8,5 +8,7 @@
         upgrade: dist
 
   tasks:
+    - include: tasks/users.yml
+    - include: tasks/cron.yml
     - include: tasks/packages.yml
 
