--- a/tasks/users.yml
+++ b/tasks/users.yml
@@ -2,3 +2,5 @@
   user: name=ansible uid=900
 - name: copy ansible sudoers file
   copy: src=files/sudoers_ansible dest=/etc/sudoers.d/ansible owner=root group=root mode=0440
+- name: create mortal user
+  user: name={{username}}
