--- a/local.yml
+++ b/local.yml
@@ -1,5 +1,7 @@
 - hosts: localhost
   become: true
+  vars_files:
+    - inventory/group_vars/all.yml
   pre_tasks:
     - name: update repositories
       apt: update_cache=yes
