--- a/local.yml
+++ b/local.yml
@@ -13,4 +13,5 @@
     - include: tasks/users.yml
     - include: tasks/cron.yml
     - include: tasks/packages.yml
+    - include: tasks/setup.yml
 
