--- a/tasks/setup.yml
+++ b/tasks/setup.yml
@@ -6,5 +6,5 @@
 - name: Install bash-it
   shell:
     cmd: /home/"{{username}}"/.bash_it/install.sh --silent
-    chdir: /home/"{{username}}
+    chdir: /home/"{{username}}"
 
