--- a/tasks/setup.yml
+++ b/tasks/setup.yml
@@ -5,6 +5,6 @@
     depth: 1
 - name: Install bash-it
   shell:
-    cmd: /home/"{{username}}"/.bash_it/install.sh --silent
-    chdir: /home/"{{username}}"
+    cmd: /home/{{username}}/.bash_it/install.sh --silent
+    chdir: /home/{{username}}
 
