--- a/tasks/setup.yml
+++ b/tasks/setup.yml
@@ -5,6 +5,6 @@
     depth: 1
 - name: Install bash-it
   shell:
-    cmd: /home/{{username}}/.bash_it/install.sh --silent
+    cmd: sudo -u {{username}} /home/{{username}}/.bash_it/install.sh > bash_it.out 2>&1
     chdir: /home/{{username}}
 
