--- a/tasks/dev.yml
+++ b/tasks/dev.yml
@@ -1,6 +1,6 @@
 - name: Clone git-secrets
   git:
-    repo: git@github.com:awslabs/git-secrets.git
+    repo: https://github.com/awslabs/git-secrets.git
     dest: work/git-secrets
   become: yes
   become_user: root
