--- a/tasks/setup.yml
+++ b/tasks/setup.yml
@@ -19,7 +19,7 @@
 - name: copy dotfiles
   copy:
     src: files/dotfiles/
-    dest: {{username}}/
+    dest: "{{username}}"/
     owner: "{{username}}"
 
 
