--- a/tasks/users.yml
+++ b/tasks/users.yml
@@ -11,6 +11,7 @@
     dest: /etc/sudoers.d/ansible
     mode: 0440
     validate: /usr/sbin/visudo -cf %s
+  vars:
     username: ansible
   become: yes
   become_user: root
