--- a/inventory/group_vars/all.yml
+++ b/inventory/group_vars/all.yml
@@ -1,3 +1,5 @@
 ---
 
 username: m8ryx
+aws_region: us-west-2
+vpn_ip: "{{ lookup('aws_ssm', 'm8ryx.vpn_ip', region=hostvars[inventory_hostname]['aws_region'] }}"
