--- a/local.yml
+++ b/local.yml
@@ -10,9 +10,10 @@
         upgrade: dist
 
   tasks:
+    - include: tasks/packages.yml
+    - include: tasks/aws.yml
     - include: tasks/users.yml
     - include: tasks/cron.yml
-    - include: tasks/packages.yml
     - include: tasks/setup.yml
     - include: tasks/dev.yml
 
